Extract and show template description